--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.515.0",
-    "next": "^15.5.6",
+    "next": "15.5.7",
     "next-auth": "^5.0.0-beta.29",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.10",
